<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_padding"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_password"
        android:textAppearance="@android:style/TextAppearance.Medium"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:background="@drawable/result_border">
        <TextView
            android:id="@+id/text_result"
            tools:text="Result"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_marginTop="@dimen/result_margin"
            android:layout_marginBottom="@dimen/result_margin"
            style="@style/MyStyle"/>

        <ImageButton
            android:id="@+id/copyResultButton"
            android:enabled="false"
            android:src="@drawable/ic_content_copy_black_24dp"
            android:padding="@dimen/copy_image_pudding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>


    <EditText
        android:id="@+id/edit_src"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text"
        />

    <CheckBox
        android:id="@+id/check_caps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_caps"
        android:checked="true"/>
    <CheckBox
        android:id="@+id/check_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_numbers"
        android:checked="true"/>
    <CheckBox
        android:id="@+id/check_symbols"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/check_symbols"/>
    <Button
        android:id="@+id/generateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/generateButton"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/result_border">
        <TextView
            android:id="@+id/text_generated"
            tools:text="Result"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@android:style/TextAppearance.Medium"
            android:layout_marginTop="@dimen/result_margin"
            android:layout_marginBottom="@dimen/result_margin"
            android:layout_toLeftOf="@id/copyGeneratedButton"
            style="@style/MyStyle"/>

        <ImageButton
            android:id="@+id/copyGeneratedButton"
            android:enabled="false"
            android:src="@drawable/ic_content_copy_black_24dp"
            android:padding="@dimen/copy_image_pudding"
            android:layout_width="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_height="wrap_content"/>
    </RelativeLayout>


</LinearLayout>